# Anubis

./: .gitignore  LICENSE  README.md  anubis.yaml.example  pyproject.toml  start_server.py
docs/: Anubis - Overview.md
src/anubis/: __init__.py
src/anubis/agents/: base.py  graph.py
src/anubis/api/: app.py
src/anubis/api/templates/: alerts.html  base.html  chat.html  cleanup.html  dashboard.html  drivers.html  events.html  services.html
src/anubis/cli/: main.py
src/anubis/core/: config.py  guardrails.py  logging.py  watchdog.py
src/anubis/db/: engine.py  models.py
src/anubis/knowledge/: bsod_codes.py  event_ids.py  lookup.py  services_reference.py
src/anubis/llm/: ollama_client.py  router.py  tool_registry.py
src/anubis/tools/: __init__.py  cleanup.py  disk_health.py  drivers.py  event_logs.py  performance.py  processes.py  restore_point.py  services.py  system_health.py
tests/: test_config.py  test_guardrails.py  test_knowledge.py
tests/llm/: test_tool_registry.py
tests/tools/: test_processes.py  test_system_health.py
